devops/platform/keycloak/4__service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
    - name: management
      port: 9000
  selector:
    app: keycloak
  type: ClusterIP
